<resources>
    <string name="app_name">Song app for ToopLoox</string>
    <string name="search_hint">Search by: song title, artist, year</string>
    <string name="search_itunes_hint">Type in a song title, artist or year and hit OK</string>
    <string name="song_name">Song title</string>
    <string name="artist">Artist:</string>
    <string name="release_year">Release date:</string>
    <string name="collection">Album:</string>
    <string name="country">Country:</string>
    <string name="genre">Genre:</string>
    <string name="price">Track price:</string>
    <string name="empty_list">Nothing here&#8230;</string>
    <string name="welcome_msg"><b>Welcome!</b>\n\n\nNavigate <i>left</i> to choose <i>iTunes</i> source.\n\nNavigate <i>right</i> to choose <i>local</i> source.</string>
    <string name="remote">Remote</string>
    <string name="local">Local</string>
    <string name="empty_msg">No results.\nPlease type a song title, artist or release year.</string>
</resources>
