<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/albumImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="15dp"
            android:adjustViewBounds="true"
            android:background="@color/colorPrimary"
            android:scaleType="centerInside"
            android:src="@drawable/ic_song" />

        <TextView
            android:id="@+id/titleDetailed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/albumImage"
            android:fontFamily="sans-serif-medium"
            android:text="tytuł"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/artistDetailed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleDetailed"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/albumImage"
            android:text="artysta"
            android:textSize="20sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/dateInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/release_year"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-light"
        android:text="date"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/collectionInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/collection"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/collectionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-light"
        android:text="album"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/countryInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/country"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-light"
        android:text="country"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/genreInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/genre"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-light"
        android:text="genre"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/priceInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/price"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-light"
        android:text="price"
        android:textSize="20sp"
        android:textStyle="italic" />

</LinearLayout>